test/fails/bad_functions/par_app7.lgl
tag hom<`t : vec<n>> is vec<n+1>;

hom<`t> homify<`t : vec<3>>(`t v) {
    return v as hom<`t>; // Bad dimensions
}

void main() {
    print 1;
}